--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,11 @@
     <string name="section_format">Hello World from section: %1$d</string>
 
     <string name="clear_button_text">Clear</string>
-    <string name="save_button_text">Clear</string>
+    <string name="save_button_text">Save</string>
 
     <string name="velocity_title">Velocity [ft/s]:</string>
     <string name="fire_rate_title">Fire rate [1/min]:</string>
+    <string name="measure_history_title">Samples history:</string>
     <string name="not_analyzed_text">N/A</string>
 
     <string-array name="tab_names">
